--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -3,7 +3,7 @@ server.port=7003
 # allow for RefreshScope
 management.endpoints.web.exposure.include=*
 
-spring.datasource.url: jdbc:mysql://localhost:3306/post?useSSL=false
+spring.datasource.url: jdbc:mysql://localhost:3306/inventory?useSSL=false
 spring.datasource.username: demouser
 spring.datasource.password: demouser
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
