--- a/level-up-service.properties
+++ b/level-up-service.properties
@@ -1,2 +1,10 @@
 server.port=7001
+
+# allow for RefreshScope
 management.endpoints.web.exposure.include=*
+
+spring.datasource.url: jdbc:mysql://localhost:3306/level_up?useSSL=false
+spring.datasource.username: demouser
+spring.datasource.password: demouser
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
+
