--- a/invoice-service.properties
+++ b/invoice-service.properties
@@ -1,2 +1,8 @@
 server.port=7002
+
 management.endpoints.web.exposure.include=*
+
+spring.datasource.url: jdbc:mysql://localhost:3306/invoice?useSSL=false&serverTimezone=UTC
+spring.datasource.username: demouser
+spring.datasource.password: demouser
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
