--- a/admin-api-service.properties
+++ b/admin-api-service.properties
@@ -2,3 +2,8 @@ server.port=8282
 
 # allow for RefreshScope
 management.endpoints.web.exposure.include=*
+
+spring.datasource.url: jdbc:mysql://localhost:3306/spring_security?useSSL=false
+spring.datasource.username: 
+spring.datasource.password: 
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
