--- a/invoice-service.properties
+++ b/invoice-service.properties
@@ -3,3 +3,7 @@ server.port=7002
 # allow for RefreshScope
 management.endpoints.web.exposure.include=*
 
+spring.datasource.url: jdbc:mysql://localhost:3306/invoice?useSSL=false
+spring.datasource.username: 
+spring.datasource.password: 
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
