--- a/level-up-service.properties
+++ b/level-up-service.properties
@@ -4,7 +4,7 @@ server.port=7001
 management.endpoints.web.exposure.include=*
 
 spring.datasource.url: jdbc:mysql://localhost:3306/level_up?useSSL=false
-spring.datasource.username: 
-spring.datasource.password: 
+spring.datasource.username: demouser
+spring.datasource.password: demouser
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 
