--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -4,6 +4,6 @@ server.port=7003
 management.endpoints.web.exposure.include=*
 
 spring.datasource.url: jdbc:mysql://localhost:3306/inventory?useSSL=false
-spring.datasource.username: 
-spring.datasource.password: 
+spring.datasource.username: demouser
+spring.datasource.password: demouser
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
