--- a/invoice-service.properties
+++ b/invoice-service.properties
@@ -3,3 +3,8 @@ server.port=7002
 # allow for RefreshScope
 management.endpoints.web.exposure.include=*
 
+
+spring.datasource.url: jdbc:mysql://localhost:3306/invoice?useSSL=false
+spring.datasource.username: demouser
+spring.datasource.password: demouser
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
