--- a/customer-service.properties
+++ b/customer-service.properties
@@ -4,6 +4,6 @@ server.port=7005
 management.endpoints.web.exposure.include=*
 
 spring.datasource.url: jdbc:mysql://localhost:3306/customer?useSSL=false
-spring.datasource.username: 
-spring.datasource.password: 
+spring.datasource.username: root
+spring.datasource.password: password
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
