--- a/product-service.properties
+++ b/product-service.properties
@@ -3,7 +3,7 @@ server.port=7004
 # allow for RefreshScope
 management.endpoints.web.exposure.include=*
 
-spring.datasource.url: jdbc:mysql://localhost:3306/product?useSSL=false&serverTimezone=EDT
+spring.datasource.url: jdbc:mysql://localhost:3306/product?useSSL=false&serverTimezone=EST
 spring.datasource.username: root
 spring.datasource.password: password
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
